# telescope-python

./: .gitignore  PUBLISHING.md  PYTHON_CLIENT_INTEGRATION_SUCCESS.md  README.md  SETUP_PYPI.md  publish.sh  pyproject.toml  setup.py
examples/: django_example.py
telescope/: __init__.py  client.py  decorators.py  integrations.py
telescope/integrations/: __init__.py  aiohttp.py  base.py  celery.py  django.py  fastapi.py  flask.py  logging.py  openai.py  quart.py  redis.py  registry.py  requests.py  sanic.py  sqlalchemy.py  starlette.py  tornado.py
telescope_client/: __init__.py  cli.py  client.py  context.py
telescope_client.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: debug_telescope_client.py  fixed_telescope_integration.py  test_telescope_integration.py
